2008-05-19  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed non-leading slash treatment in expmeta.

2008-05-07  Gerrit Pape <pape@smarden.org>

	* Fixed lexical error in arithmetic expansion of & and |.

2008-05-03  Dan McGee <dpmcgee@gmail.com>

	* Fixed klibc/klcc build problems.
	* Added gitignore.

2008-05-03  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed _PATH_BSHELL warning.
	* Test __GLIBC__ instead of _GNU_SOURCE.
	* Restored warning when getcwd fails.
	* Set default exvwarning2 arg0 for errors during early initialisation.
	* Use uninitialized_var to silence bogus warnings.

2008-05-02  Herbert Xu <herbert@gondor.apana.org.au>

	* Restored non-glibc getcwd support.

2008-03-07  Larry Doolittle <ldoolitt@recycle.lbl.gov>

	* Fix cmdtxt crash on if statements.

2008-01-01  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix slash treatment in expmeta.

2007-12-27  Herbert Xu <herbert@gondor.apana.org.au>

	* Add FAKEEOFMARK for expandstr.
	* Do not show prompts in expandstr.

2007-12-23  Gerrit Pape <pape@smarden.org>

	* If imaxdiv() isn't available, use / and % operators.

2007-12-23  Richard M Kreuter <kreuter@progn.net>

	* Add set +o support.

2007-12-23  Steve Langasek <steve.langasek@canonical.com>

	* Fixed bad pointer arithmetic in evalcommand.

2007-11-11  Herbert Xu <herbert@gondor.apana.org.au>

	* Removed noexpand/length check on eofmark.
	* Removed herefd hack.
	* Expand here-documents in the current shell environment.

2007-10-20  Herbert Xu <herbert@gondor.apana.org.au>

	* Added configure --enable-glob and --enable-fnmatch options.
	* Fix here-doc corruption.

2007-10-17  Herbert Xu <herbert@gondor.apana.org.au>

	* Replace shared illnum message by badnum function.

2007-10-17  Oleg Verych <olecom@flower.upol.cz>

	* Disallow completely blank strings in non-arithmetic context.

2007-10-15  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed execing of scripts with no hash-bang.

2007-10-11  Herbert Xu <herbert@gondor.apana.org.au>
